.metadata/.plugins/org.eclipse.cdt.ui/EX_PidPlus_F407ZGT6_Hollies.build.log
16:35:46 **** Incremental Build of configuration Debug for project EX_PidPlus_F407ZGT6_Hollies ****
make -j8 all 
arm-none-eabi-gcc "../MyCode/ina238.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"MyCode/ina238.d" -MT"MyCode/ina238.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "MyCode/ina238.o"
arm-none-eabi-gcc "../MyCode/oled_spi.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"MyCode/oled_spi.d" -MT"MyCode/oled_spi.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "MyCode/oled_spi.o"
arm-none-eabi-gcc "../MyCode/pidPlus.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"MyCode/pidPlus.d" -MT"MyCode/pidPlus.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "MyCode/pidPlus.o"
arm-none-eabi-gcc "../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.d" -MT"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.o"
arm-none-eabi-gcc "../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.d" -MT"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.o"
arm-none-eabi-gcc "../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.d" -MT"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.o"
arm-none-eabi-gcc "../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.d" -MT"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.o"
arm-none-eabi-gcc "../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.d" -MT"Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.o"
In file included from ../MyCode/oled_spi.c:1:
../MyCode/oled_spi.c: In function 'OLED_WR_Byte':
E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include/oled_spi.h:28:43: error: 'OLED_DC_GPIO_Port' undeclared (first use in this function)
   28 | #define OLED_DC_Set()   HAL_GPIO_WritePin(OLED_DC_GPIO_Port, OLED_DC_Pin, GPIO_PIN_SET);
      |                                           ^~~~~~~~~~~~~~~~~
../MyCode/oled_spi.c:21:3: note: in expansion of macro 'OLED_DC_Set'
   21 |   OLED_DC_Set(); //ÂëΩ‰ª§/Êï∞ÊçÆÊ†áÂøó‰ΩçÁΩÆ‰∏?1ÔºåÂàôË°®Á§∫‰º†È?ÅÁöÑÊòØÂëΩ‰ª§Â≠óËä?
      |   ^~~~~~~~~~~
E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include/oled_spi.h:28:43: note: each undeclared identifier is reported only once for each function it appears in
   28 | #define OLED_DC_Set()   HAL_GPIO_WritePin(OLED_DC_GPIO_Port, OLED_DC_Pin, GPIO_PIN_SET);
      |                                           ^~~~~~~~~~~~~~~~~
../MyCode/oled_spi.c:21:3: note: in expansion of macro 'OLED_DC_Set'
   21 |   OLED_DC_Set(); //ÂëΩ‰ª§/Êï∞ÊçÆÊ†áÂøó‰ΩçÁΩÆ‰∏?1ÔºåÂàôË°®Á§∫‰º†È?ÅÁöÑÊòØÂëΩ‰ª§Â≠óËä?
      |   ^~~~~~~~~~~
E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include/oled_spi.h:28:62: error: 'OLED_DC_Pin' undeclared (first use in this function); did you mean 'OLED_DC_Clr'?
   28 | #define OLED_DC_Set()   HAL_GPIO_WritePin(OLED_DC_GPIO_Port, OLED_DC_Pin, GPIO_PIN_SET);
      |                                                              ^~~~~~~~~~~
../MyCode/oled_spi.c:21:3: note: in expansion of macro 'OLED_DC_Set'
   21 |   OLED_DC_Set(); //ÂëΩ‰ª§/Êï∞ÊçÆÊ†áÂøó‰ΩçÁΩÆ‰∏?1ÔºåÂàôË°®Á§∫‰º†È?ÅÁöÑÊòØÂëΩ‰ª§Â≠óËä?
      |   ^~~~~~~~~~~
E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include/oled_spi.h:32:43: error: 'OLED_CS_GPIO_Port' undeclared (first use in this function)
   32 | #define OLED_CS_Clr()   HAL_GPIO_WritePin(OLED_CS_GPIO_Port, OLED_CS_Pin, GPIO_PIN_RESET);
      |                                           ^~~~~~~~~~~~~~~~~
../MyCode/oled_spi.c:26:2: note: in expansion of macro 'OLED_CS_Clr'
   26 |  OLED_CS_Clr(); //ÁâáÈ?â‰ø°Âè∑‰∏∫‰ΩéÔºåË°®Á§∫ÈÄâ‰∏≠OLED
      |  ^~~~~~~~~~~
E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include/oled_spi.h:32:62: error: 'OLED_CS_Pin' undeclared (first use in this function); did you mean 'OLED_CS_Clr'?
   32 | #define OLED_CS_Clr()   HAL_GPIO_WritePin(OLED_CS_GPIO_Port, OLED_CS_Pin, GPIO_PIN_RESET);
      |                                                              ^~~~~~~~~~~
../MyCode/oled_spi.c:26:2: note: in expansion of macro 'OLED_CS_Clr'
   26 |  OLED_CS_Clr(); //ÁâáÈ?â‰ø°Âè∑‰∏∫‰ΩéÔºåË°®Á§∫ÈÄâ‰∏≠OLED
      |  ^~~~~~~~~~~
../MyCode/oled_spi.c:27:2: warning: implicit declaration of function 'HAL_SPI_Transmit' [-Wimplicit-function-declaration]
   27 |  HAL_SPI_Transmit(&hspi1, &dat, 1, 1000); //oled.cÊñá‰ª∂ÂîØ‰∏Ä‰øÆÊîπÁöÑÂú∞ÊñπÔºåËøôÈáåÊòØÂà©Áî®‰∫ÜhalÂ∫ìÊèê‰æõÁöÑSPI‰º†È?ÅÂáΩÊï?
      |  ^~~~~~~~~~~~~~~~
../MyCode/oled_spi.c:27:20: error: 'hspi1' undeclared (first use in this function)
   27 |  HAL_SPI_Transmit(&hspi1, &dat, 1, 1000); //oled.cÊñá‰ª∂ÂîØ‰∏Ä‰øÆÊîπÁöÑÂú∞ÊñπÔºåËøôÈáåÊòØÂà©Áî®‰∫ÜhalÂ∫ìÊèê‰æõÁöÑSPI‰º†È?ÅÂáΩÊï?
      |                    ^~~~~
In file included from ../MyCode/oled_spi.c:1:
../MyCode/oled_spi.c: In function 'OLED_Init':
E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include/oled_spi.h:25:43: error: 'OLED_RST_GPIO_Port' undeclared (first use in this function)
   25 | #define OLED_RST_Clr()  HAL_GPIO_WritePin(OLED_RST_GPIO_Port, OLED_RST_Pin, GPIO_PIN_RESET);
      |                                           ^~~~~~~~~~~~~~~~~~
../MyCode/oled_spi.c:190:2: note: in expansion of macro 'OLED_RST_Clr'
  190 |  OLED_RST_Clr();
      |  ^~~~~~~~~~~~
E:/Document/STM32_Project/EX_PidPlus_F407ZGT6_Hollies/MyCode/include/oled_spi.h:25:63: error: 'OLED_RST_Pin' undeclared (first use in this function); did you mean 'OLED_RST_Set'?
   25 | #define OLED_RST_Clr()  HAL_GPIO_WritePin(OLED_RST_GPIO_Port, OLED_RST_Pin, GPIO_PIN_RESET);
      |                                                               ^~~~~~~~~~~~
../MyCode/oled_spi.c:190:2: note: in expansion of macro 'OLED_RST_Clr'
  190 |  OLED_RST_Clr();
      |  ^~~~~~~~~~~~
make: *** [MyCode/subdir.mk:25: MyCode/oled_spi.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

16:35:47 Build Failed. 9 errors, 1 warnings. (took 603ms)

